fix: adjust fonts usage and improve readability

--- a/css/base.css
+++ b/css/base.css
@@ -18,8 +18,8 @@
   --red: #e8687f;
   --yellow: #f3c04d;
 
-  --base-font: "Rubik", sans-serif;
-  --second-font: "Pixelify Sans", sans-serif;
+  --base-font: "Pixelify Sans", sans-serif;
+  --second-font: "Hachi Maru Pop", cursive;
   --all: all 0.3s ease-in-out;
 }
 
