--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap");
 
 @import "./base.css";
 
@@ -294,6 +294,7 @@
 /* ---- INFO ---- */
 .todo-info {
   font-size: 20px;
+  font-family: var(--base-font);
   text-align: center;
 }
 
